urls fixed and added html files

--- a/FlowersInventory/InvoiceImport/templates/home.html
+++ b/FlowersInventory/InvoiceImport/templates/home.html
@@ -1,12 +1,10 @@
 {% extends "base/base.html" %}
 
-{% load static %}
-
 
 {% block content %}
     <div class = 'text-center'>
         <p> Home </p>
-        <h1> {{ greeting }}
+        <h1> {{ greeting }} </h1>
     </div>
 
 {% endblock %}
