--- a/FlowersInventory/InvoiceImport/templates/graph.html
+++ b/FlowersInventory/InvoiceImport/templates/graph.html
@@ -4,33 +4,36 @@
 <head>
 <title>Bite exercise stats</title>
 </head>
-<body>
     {% block content %}
-        <canvas id="myChart" width="800" height="400"></canvas>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <script>
-        const ctx = document.getElementById('myChart').getContext('2d');
-        const myChart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels : [{% for item in labels %}"{{ item }}", {% endfor %}],
-                datasets: [{
-                    label: "Inventory",
-                    data : [{% for item in values %}{{ item }},{% endfor %}],
-                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    y: {
-                        beginAtZero: true
-                    }
-                }
-            }
-        });
-        </script>
+        <p>
+            im in graphs
+        </p>
+
+<!--        <canvas id="myChart" width="800" height="400"></canvas>-->
+<!--        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>-->
+<!--        <script>-->
+<!--        const ctx = document.getElementById('myChart').getContext('2d');-->
+<!--        const myChart = new Chart(ctx, {-->
+<!--            type: 'bar',-->
+<!--            data: {-->
+<!--                labels : [{% for item in labels %}"{{ item }}",{% endfor %}],-->
+<!--                datasets: [{-->
+<!--                    label: "Inventory",-->
+<!--                    data : [{% for item in values %}{{ item }},{% endfor %}],-->
+<!--                    backgroundColor: 'rgba(75, 192, 192, 0.2)',-->
+<!--                    borderColor: 'rgba(75, 192, 192, 1)',-->
+<!--                    borderWidth: 1-->
+<!--                }]-->
+<!--            },-->
+<!--            options: {-->
+<!--                scales: {-->
+<!--                    y: {-->
+<!--                        beginAtZero: true-->
+<!--                    }-->
+<!--                }-->
+<!--            }-->
+<!--        });-->
+<!--        </script>-->
     {% endblock %}
-</body>
+
 </html>
