--- a/FlowersInventory/InvoiceImport/templates/base/base.html
+++ b/FlowersInventory/InvoiceImport/templates/base/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+<!--{% load static %}-->
 <!DOCTYPE>
 <html lang='en'>
     <head>
@@ -9,7 +9,9 @@
     <body>
         {% include 'base/navbar.html' with brand_name="Lessly's Flowers"%}
         <div class="container">
-            {% block content %} {% endblock %}
+            {% block content %}
+
+            {% endblock %}
         </div>
         {% include 'base/js.html' %}
 
