--- a/FlowersInventory/InvoiceImport/templates/base/navbar.html
+++ b/FlowersInventory/InvoiceImport/templates/base/navbar.html
@@ -1,7 +1,7 @@
-{% url 'home' as home_url %}
-{% url 'inventory' as inventory_url %}
-{% url 'graph' as graph_url %}
-{% url 'selection' as month_selection_url %}
+{% url 'import:home' as home_url %}
+{% url 'import:inventory' as inventory_url %}
+{% url 'import:graph' as graph_url %}
+{% url 'import:selection' as month_selection_url %}
 {% load static %}
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-3">
