--- a/FlowersInventory/InvoiceImport/templates/base/navbar.html
+++ b/FlowersInventory/InvoiceImport/templates/base/navbar.html
@@ -1,5 +1,5 @@
 {% url 'import:home' as home_url %}
-{% url 'import:inventory' as inventory_url %}
+{% url 'import:inventory' as import_url %}
 {% url 'import:graph' as graph_url %}
 {% url 'import:selection' as month_selection_url %}
 {% load static %}
@@ -22,12 +22,12 @@
       <li class="nav-item {% if request.path == home_url %} active {% endif %}">
         <a class="nav-link" href="{{ home_url }}">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item {% if request.path == inventory_url %} active {% endif %}">
-        <a class="nav-link" href="{{ inventory_url }}">Inventory</a>
+      <li class="nav-item {% if request.path == import_url %} active {% endif %}">
+        <a class="nav-link" href="{{ import_url }}">Import</a>
       </li>
-      <li class="nav-item {% if request.path == graph_url %} active {% endif %}">
-        <a class="nav-link" href="{{ graph_url }}">Graph</a>
-      </li>
+<!--      <li class="nav-item {% if request.path == graph_url %} active {% endif %}">-->
+<!--        <a class="nav-link" href="{{ graph_url }}">Graph</a>-->
+<!--      </li>-->
       <li class="nav-item {% if request.path == month_selection_url %} active {% endif %}">
         <a class="nav-link" href="{{ month_selection_url }}">View Data</a>
       </li>
