fixed models and a console log in base.html

--- a/FlowersInventory/InvoiceImport/templates/base/base.html
+++ b/FlowersInventory/InvoiceImport/templates/base/base.html
@@ -30,7 +30,7 @@
                     data: formData,
 
                     success: function (data) {
-                        console.log(data);
+                        console.log({data});
                     }
                 })
             })
