--- a/FlowersInventory/InvoiceImport/templates/forms/month_selection.html
+++ b/FlowersInventory/InvoiceImport/templates/forms/month_selection.html
@@ -1,8 +1,21 @@
 <form class="month-form" method="GET" action='{% url "import:selection" %}' data-endpoint='{% url "import:selection" %}'
       class="form">
     {% csrf_token %}
-    <input type="hidden" name="invoice_id" value='{{ invoice.products }}'>
     <span class="submit-span">
-        <button type="submit" class="btn btn success">January</button>
+        <select name="month">
+            <option value="1">January</option>
+            <option value="2">February</option>
+            <option value="3">March</option>
+            <option value="4">April</option>
+            <option value="5">May</option>
+            <option value="6">June</option>
+            <option value="7">July</option>
+            <option value="8">August</option>
+            <option value="9">September</option>
+            <option value="10">October</option>
+            <option value="11">November</option>
+            <option value="12">December</option>
+        </select>
+        <input type="submit" name="submit" value='Submit'>
     </span>
 </form>
