--- a/FlowersInventory/InvoiceImport/templates/forms/invoice_form.html
+++ b/FlowersInventory/InvoiceImport/templates/forms/invoice_form.html
@@ -1,4 +1,4 @@
-<form class="month-form" method="GET" action='{% url "import:selection" %}' data-endpoint='{% url "import:selection" %}'
+<form class="invoice-form" method="GET" action='{% url "import:invoices" %}' data-endpoint='{% url "import:invoices" %}'
       class="form">
     {% csrf_token %}
     <span class="submit-span">
