--- a/FlowersInventory/InvoiceImport/templates/forms/invoice_form.html
+++ b/FlowersInventory/InvoiceImport/templates/forms/invoice_form.html
@@ -1,21 +1,28 @@
 <form class="invoice-form" method="GET" action='{% url "import:invoices" %}' data-endpoint='{% url "import:invoices" %}'
-      class="form">
+      class="form" name="invoiceForm">
     {% csrf_token %}
-    <span class="submit-span">
-        <select name="month">
-            <option value="1">January</option>
-            <option value="2">February</option>
-            <option value="3">March</option>
-            <option value="4">April</option>
-            <option value="5">May</option>
-            <option value="6">June</option>
-            <option value="7">July</option>
-            <option value="8">August</option>
-            <option value="9">September</option>
-            <option value="10">October</option>
-            <option value="11">November</option>
-            <option value="12">December</option>
-        </select>
-        <input type="submit" name="submit" value='Submit'>
-    </span>
+    <select name="monthSelect" onchange="showMonthInvoice()">
+        <option value="1">January</option>
+        <option value="2">February</option>
+        <option value="3">March</option>
+        <option value="4">April</option>
+        <option value="5">May</option>
+        <option value="6">June</option>
+        <option value="7">July</option>
+        <option value="8">August</option>
+        <option value="9">September</option>
+        <option value="10">October</option>
+        <option value="11">November</option>
+        <option value="12">December</option>
+    </select>
+    <input type="submit" name="submit" value='Submit'>
 </form>
+
+<p id="pF"></p>
+<p id="pS"></p>
+<p id="pT"></p>
+
+
+
+
+
