--- a/FlowersInventory/InvoiceImport/templates/forms/invoice_product_form.html
+++ b/FlowersInventory/InvoiceImport/templates/forms/invoice_product_form.html
@@ -5,10 +5,9 @@
         {% csrf_token %}
         <!--// set up button for each invoice-->
         <span class="submit-span">
-                     <label for="invoice_input"> {{invoice}}</label>
-                    <input id="invoice_input" type="hidden" name="invoice_id" value="{{ invoice.id }}">
-
-                    <button type="submit" class="btn btn-success">Submit</button>
-                </span>
+            <label for="invoice_input"> {{invoice}}</label>
+            <input id="invoice_input" type="hidden" name="invoice_id" value="{{ invoice.id }}">
+            <button type="submit" class="btn btn-success">Submit</button>
+        </span>
     </form>
-</div>Ò
+</div>
