--- a/FlowersInventory/InvoiceImport/templates/invoices_view.html
+++ b/FlowersInventory/InvoiceImport/templates/invoices_view.html
@@ -9,6 +9,7 @@
     {% if invoices.exists %}
 
         {% for invoice in invoices.all %}
+            {{ invoices.purchase_date }}
             <div>
                  {%  include 'forms/invoice_product_form.html' with product=object cart=cart %}
             </div>
