--- a/FlowersInventory/InvoiceImport/templates/forms/invoice_form.html
+++ b/FlowersInventory/InvoiceImport/templates/forms/invoice_form.html
@@ -1,10 +1,11 @@
 <form class="invoice-form" method="GET" action='{% url "import:invoices" %}' data-endpoint='{% url "import:invoices" %}'
       class="form" name="invoiceForm">
     {% csrf_token %}
-    <select name="monthSelect">
+    <select name="monthSelect" selected={{month}}>
+        <option value="" selected disabled>Select Month</option>
         <option value="1">January</option>
         <option value="2">February</option>
-        <option value="3">March</option>
+        <option value="3" >March</option>
         <option value="4">April</option>
         <option value="5">May</option>
         <option value="6">June</option>
