--- a/FlowersInventory/InvoiceImport/templates/home.html
+++ b/FlowersInventory/InvoiceImport/templates/home.html
@@ -3,8 +3,9 @@
 
 {% block content %}
     <div class = 'text-center'>
-        <p> Home </p>
-        <h1> {{ greeting }} </h1>
+        <p> Bienvenidos! </p>
+        <h1> Welcome </h1>
+
     </div>
 
 {% endblock %}
