changed the time for the import page

--- a/FlowersInventory/InvoiceImport/templates/import_view.html
+++ b/FlowersInventory/InvoiceImport/templates/import_view.html
@@ -8,7 +8,7 @@
             <div class="col-md-6 col-xs-12">
             <div class="x_panel">
                     <div class="x_title">
-                        <h2>Import Data into Database</h2>
+                        <h2>Import Flower Invoices: </h2>
                         <div class="clearfix"></div>
                     </div>
                 </div>
