starting jquery for updating inventory qualities

--- a/FlowersInventory/InvoiceImport/templates/base/base.html
+++ b/FlowersInventory/InvoiceImport/templates/base/base.html
@@ -80,6 +80,26 @@
                 }
             })
         })
+
+        // on click function for updating inventory quantities
+        var inventoryUpdateForm = $('.inventory-update-form')
+        console.log('got form')
+        inventoryUpdateForm.onclick = function () {
+            // console.log('inside invoiceProductForm function')
+            //
+            // var thisForm = $(this)
+            // var actionEndpoint = thisForm.attr('data-endpoint')
+            // var httpMethod = thisForm.attr('method')
+            // var formData = thisForm.serialize();
+
+            updateInventoryQuantities ()
+            console.log('inside onclick function')
+        };
+
+        function updateInventoryQuantities () {
+            console.log('inside updateInventoryQuantities function')
+            document.getElementById("update-button").innerHTML = "HOW MUCH DID YOU USE? ";
+        }
     });
 </script>
 </body>
