--- a/FlowersInventory/InvoiceImport/templates/forms/inventory_update_form.html
+++ b/FlowersInventory/InvoiceImport/templates/forms/inventory_update_form.html
@@ -1,12 +1,10 @@
-<form class="inventory-update-form" method="GET" action='{% url "import:inventory_update" %}'
-      data-endpoint='{% url "import:inventory_update" %}'
-      class="form" name="invoiceForm">
+<form class="inventory-update-form" method="POST" action='{% url "import:inventory_update" %}'
+      data-endpoint='{% url "import:inventory_update" %}'>
     {% csrf_token %}
-    <label for="product">Choose a Product:</label>
-    <select class="product-list" name="product" id="product">
-        {% for product in inventory %}
-        <option value={{product}}>{{product}}</option>
-        {% endfor %}
-    </select>
-    <button class="update-button" type="submit" class="btn btn-success">Update</button>
+    <div class="update-input" hidden>
+        <label for="used-inventory"> How many bunches were used today? </label>
+        <input id="used-inventory" type="text">
+        <button id="save-used-inventory" type="submit" class="btn btn-success">Save</button>
+    </div>
+
 </form>
