--- a/FlowersInventory/InvoiceImport/templates/inventory_view.html
+++ b/FlowersInventory/InvoiceImport/templates/inventory_view.html
@@ -5,7 +5,7 @@
 <table border="5px" align="center">
     <tr>
         <th> Name:</th>
-        <th> Total Units:</th>
+        <th> Total Bunches:</th>
     </tr>
     {% for product in products %}
     <tr>
