--- a/FlowersInventory/InvoiceImport/templates/inventory_update_view.html
+++ b/FlowersInventory/InvoiceImport/templates/inventory_update_view.html
@@ -1,6 +1,6 @@
 {% extends "base/base.html" %}
 
 {% block content %}
-    LET'S UPDATE
-    {% include 'forms/inventory_update_form.html' %}
+    <title> Let's Update</title>
+    {% include 'forms/select_product_to_update_form.html' %}
 {% endblock %}
