added total_units bought to table in invoice_product_view.html

--- a/FlowersInventory/InvoiceImport/templates/invoice_product_view.html
+++ b/FlowersInventory/InvoiceImport/templates/invoice_product_view.html
@@ -9,12 +9,14 @@
         <th> Name:</th>
         <th> Type:</th>
         <th> Unit Price:</th>
+        <th> Quantity Bought: </th>
     </tr>
     {% for invoice_product in invoices_products %}
     <tr>
         <td> {{ invoice_product.product.name }}</td>
         <td> {{ invoice_product.product.unit_type }}</td>
         <td> {{ invoice_product.product.unit_price }}</td>
+        <td>  {{ invoice_product.total_units }}</td>
     </tr>
     {% endfor %}
 </table>
