--- a/FlowersInventory/InvoiceImport/templates/forms/select_product_to_update_form.html
+++ b/FlowersInventory/InvoiceImport/templates/forms/select_product_to_update_form.html
@@ -1,19 +1,20 @@
-<form class="select_product_to_update_form" method="GET" action='{% url "import:inventory_update" %}'
-      data-endpoint='{% url "import:inventory_update" %}'>
-    {% csrf_token %}
-    <div>
-        <label for="product" style="font-size: 30px">Choose a Product:</label>
-    </div>
-    <div style="padding: 10px">
-        <select class="product-list" name="product" id="product">
-            {% for product in inventory %}
-            <option value={{product}}>{{product}}</option>
-            {% endfor %}
-        </select>
-    </div>
+<select id="myDropdown" class="form-select" name="dropdown">
+    <option selected value="">Select Product</option>
+    {% for inventory_instance in inventory_queryset %}
+    <option value={{inventory_instance.id}}>{{inventory_instance.product.name}}</option>
+    {% endfor %}
+</select>
 
-    <div style="padding: 10px">
-        <button id="update-button" type="submit" class="btn btn-success">Update</button>
-    </div>
+ <div id='msg'></div>
+<form hidden class="inventory-update-form" method="POST" action='{% url "import:select_product_to_update" %}'
+      data-endpoint='{% url "import:select_product_to_update" %}' id="inventory-update-form">
+    {% csrf_token %}
+
+    <label for="used-inventory"> How many bunches were used today? </label>
+    <input id="used-inventory" type="number" step="1">
+    <input id="hidden-product-id" name="" type="hidden"></input>
+    <button id="save-used-inventory" type="submit" class="btn btn-success">Save</button>
+
 
 </form>
+
