--- a/FlowersInventory/InvoiceImport/templates/base/base.html
+++ b/FlowersInventory/InvoiceImport/templates/base/base.html
@@ -94,7 +94,8 @@
         const inventoryUpdateForm = $('.inventory-update-form')
         const form = document.getElementById("inventory-update-form")
 
-        dropdown.addEventListener("change", function (e) {
+        window.onload = function (){
+            dropdown.addEventListener("change", function (e) {
             const valueSelected = e.target.value;
             console.log("here", valueSelected)
             if (valueSelected === "") {
@@ -107,6 +108,7 @@
 
             }
         });
+        }
 
         inventoryUpdateForm.submit(function (event) {
             // grabbing data related to this form
