getting the product name from the product table instead of inventory.

--- a/FlowersInventory/InvoiceImport/templates/inventory_view.html
+++ b/FlowersInventory/InvoiceImport/templates/inventory_view.html
@@ -12,7 +12,7 @@
     <tbody>
     {% for product in products %}
     <tr>
-        <td> {{ product.product.name }}</td>
+        <td> {{ product.name }}</td>
         <td> {{ product.total_units}}</td>
     </tr>
     {% endfor %}
